# vitrum

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  atoms.xyz  functions.py  mkdocs.yml  mlip_functions.py  persistent_homology.py  pyproject.toml  requirements.txt  scattering.py  setup.py  test.ipynb
.github/workflows/: publish.yml
docs/: index.md  requirements.txt
docs/source/: conf.py  index.rst
docs/vitrum/: balace.md  coordination.md  dynamics.md  glass_atoms.md  install.md  known_issues.md  mlip_functions.md  persistent_homology.md  quickstart.md  rings.md  scattering.md  structure_gen.md  utilities.md  voids.md
examples/: README.md  demo.ipynb
examples/ace-potential/: balace.yaml  demo.ipynb  my_launchpad.yaml
examples/analysis/: demo.ipynb
paper/: paper.md
src/vitrum/: __init__.py  comparison.py  coordination.py  diffusion.py  geometry.py  glass_Atoms.py  glass_atoms.py  io_helpers.py  mlip_functions.py  packing.py  persistent_homology.py  rings.py  scattering.py  structure_gen.py  structure_validation.py  trajectory.py  trajectory_tools.py  utility.py  visualization.py  voids.py  volume_estimation.py  x_ray_scattering_factor_coefficients.csv
src/vitrum/batch_active/: README.md  database.py  flows.py  get_structures.py  input.yaml  input_writer.py  learning.py  structure_gen.py  workflow.py
vitrum/: diffusion.py  glass_Atoms.py  scattering_lengths.csv
